# System-Monitor-with-Rust

./: Cargo.toml  README.md
src/: app.rs  main.rs  system_info.rs  ui.rs
